# Regi-TRUST

./: GCCNTrustRegistryNetwork.njsproj  README.md  app.js  package-lock.json  package.json
Config/: config.json  keycloak.json
Phase2/zm/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.dev  Makefile  NOTES ON DEPLOYMENT.txt  README.md  auth.sample.conf  config.sample.conf  config.sample2.conf  package-lock.json  package.json  reload-nsd.sh  requirements.txt  requirements_dev.txt  script.sh  setup.cfg
Phase2/zm/deploy/helm/: README.md
Phase2/zm/deploy/helm/nsd/: Chart.yaml  values.yaml
Phase2/zm/deploy/helm/nsd/templates/: _helpers.tpl  configmap-auth.yaml  configmap-zones.yaml  deployment.yaml  dns-service.yaml  ingress.yaml  pvc.yaml  rest-service.yaml
Phase2/zm/deploy/helm/ui/: Chart.yaml  secret.yaml  values.yaml
Phase2/zm/deploy/helm/ui/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
Phase2/zm/deploy/local/: Readme.md  clean.sh  deploy.sh  docker-compose.yml  tdzm.conf  tdzm_auth.conf  ui-local.env
Phase2/zm/docs/: ConfigProperties.md  ZM_RegiTrust_phase_2_postman_collection.json  ZM_openapi.yaml  keycloak-realm-sample.json
Phase2/zm/docs/install/: Readme.md
Phase2/zm/docs/operations/: Readme.md  ZM_swagger.yaml
Phase2/zm/docs/ui-design/: ZoneVisualizationContent.json  ZoneVisualizationMockup.drawio
Phase2/zm/etc/: zonemgr.service
Phase2/zm/tests/: test_server.py
Phase2/zm/ui/: .env  Dockerfile  README.md  THIRD-PARTY.txt  index.html  jest.config.js  package-lock.json  package.json
Phase2/zm/ui/dev_infra/: docker-compose.yml
Phase2/zm/ui/dev_infra/realm/: gxfs-dev-test.json
Phase2/zm/ui/src/client/: App.css  App.jsx
Phase2/zm/ui/src/server/: main.js  router.js
Phase2/zm/ui/tests/: zoneDataHandler.test.js
Phase2/zm/ui/tests/mockData/: mockData.js
Phase2/zm/zonedb/: __init__.py  api.py  cli.py  log.py  master.py  models.py  schemas.py
(+385 files in other folders)
